--- a/src/sass/components/_benefits.sass
+++ b/src/sass/components/_benefits.sass
@@ -124,3 +124,10 @@
 		padding: 65px 0 63px
 	&_big
 		padding: 65px 0 125px
+	&_about
+		padding: 65px 0 20px
+	&_about &__list
+		margin: 13px 0 15px
+	&_about &__item
+		padding: 0 20px 35px
+		
