--- a/src/sass/components/_other-comp.sass
+++ b/src/sass/components/_other-comp.sass
@@ -213,14 +213,16 @@
 		display: flex
 		justify-content: space-between
 		flex-wrap: wrap
-		margin: 20px 0 0
+		margin: 45px 0 0
 		&-item
 			display: flex
 			align-items: center
 			justify-content: center
 			width: (100% / 6)
-			margin-bottom: 20px
+			margin-bottom: 55px
 			img
 				width: auto
 	&_default
-		padding: 70px 0 100px
+		padding: 70px 0 155px
+		.next-section
+			bottom: 10%
