--- a/src/templates/home-page.jade
+++ b/src/templates/home-page.jade
@@ -46,7 +46,7 @@ block content
 			title: '967',
 			subTitle: 'компаний',
 			descrTop: 'Работают с нами',
-			descrBot: 'на постоянной основи'
+			descrBot: 'на постоянной основе'
 			}];
 		include components/_benefits
 
