--- a/src/templates/components/_history.jade
+++ b/src/templates/components/_history.jade
@@ -8,78 +8,78 @@ if history ? history : history = []
 			+e.slide(data-title="1996")
 				+e.item
 					+e.H5.item-year 1996 год
-					+e.P.item-text Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
+					+e.P.item-text.js-dot Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
 				+e.item
 					+e.H5.item-year 1997 год
-					+e.P.item-text Расширение сферы деятельности — наружная реклама и сувенирная продукция.
+					+e.P.item-text.js-dot Расширение сферы деятельности — наружная реклама и сувенирная продукция.
 			+e.slide(data-title="2000")
 				+e.item
 					+e.H5.item-year 1998 год
-					+e.P.item-text Приобретение неонового мини-завода- услуги по наружной рекламе в полном объёме.
+					+e.P.item-text.js-dot Приобретение неонового мини-завода- услуги по наружной рекламе в полном объёме.
 				+e.item
 					+e.H5.item-year 1999 год
-					+e.P.item-text Развитие направления «Дизайн интерьера жилых и нежилых помещений
+					+e.P.item-text.js-dot Развитие направления «Дизайн интерьера жилых и нежилых помещений
 			+e.slide(data-title="2004")
 				+e.item
 					+e.H5.item-year 2000 год
-					+e.P.item-text Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
+					+e.P.item-text.js-dot Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
 				+e.item
 					+e.H5.item-year 2001 год
-					+e.P.item-text Расширение сферы деятельности — наружная реклама и сувенирная продукция.
+					+e.P.item-text.js-dot Расширение сферы деятельности — наружная реклама и сувенирная продукция.
 			+e.slide(data-title="2008")
 				+e.item
 					+e.H5.item-year 2002 год
-					+e.P.item-text Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
+					+e.P.item-text.js-dot Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
 				+e.item
 					+e.H5.item-year 2003 год
-					+e.P.item-text Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
+					+e.P.item-text.js-dot Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
 			+e.slide(data-title="2012")
 				+e.item
 					+e.H5.item-year 2004 год
-					+e.P.item-text Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
+					+e.P.item-text.js-dot Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
 				+e.item
 					+e.H5.item-year 2005 год
-					+e.P.item-text Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
+					+e.P.item-text.js-dot Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
 			+e.slide(data-title="2017")
 				+e.item
 					+e.H5.item-year 2006 год
-					+e.P.item-text Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
+					+e.P.item-text.js-dot Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
 				+e.item
 					+e.H5.item-year 2007 год
-					+e.P.item-text Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
+					+e.P.item-text.js-dot Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
 			+e.slide
 				+e.item
 					+e.H5.item-year 2008 год
-					+e.P.item-text Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
+					+e.P.item-text.js-dot Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
 				+e.item
 					+e.H5.item-year 2009 год
-					+e.P.item-text Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
+					+e.P.item-text.js-dot Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
 			+e.slide
 				+e.item
 					+e.H5.item-year 2010 год
-					+e.P.item-text Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
+					+e.P.item-text.js-dot Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
 				+e.item
 					+e.H5.item-year 2011 год
-					+e.P.item-text Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
+					+e.P.item-text.js-dot Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
 			+e.slide
 				+e.item
 					+e.H5.item-year 2012 год
-					+e.P.item-text Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
+					+e.P.item-text.js-dot Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
 				+e.item
 					+e.H5.item-year 2013 год
-					+e.P.item-text Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
+					+e.P.item-text.js-dot Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
 			+e.slide
 				+e.item
 					+e.H5.item-year 2014 год
-					+e.P.item-text Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
+					+e.P.item-text.js-dot Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
 				+e.item
 					+e.H5.item-year 2015 год
-					+e.P.item-text Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
+					+e.P.item-text.js-dot Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
 			+e.slide
 				+e.item
 					+e.H5.item-year 2016 год
-					+e.P.item-text Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
+					+e.P.item-text.js-dot Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
 				+e.item
 					+e.H5.item-year 2017 год
-					+e.P.item-text Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
+					+e.P.item-text.js-dot Открытие рекламного агентства «Штрих Ру» в г. Тольятти. Основной вид деятельности — реклама на транспорте.
 //end history
