--- a/src/sass/components/_other-comp.sass
+++ b/src/sass/components/_other-comp.sass
@@ -220,9 +220,16 @@
 			justify-content: center
 			width: (100% / 6)
 			margin-bottom: 55px
+			+sm
+				width: 33.33333%
+				margin-bottom: 30px
 			img
 				width: auto
 	&_default
 		padding: 70px 0 155px
+		+sm
+			padding: 60px 0 40px
+		+r(424)
+			display: none
 		.next-section
 			bottom: 10%
