--- a/src/sass/components/_history.sass
+++ b/src/sass/components/_history.sass
@@ -128,6 +128,25 @@
 				width: 16px
 				height: 16px
 				margin-top: -5px
+			+r(599)
+				&:nth-child(1) button
+					left: -8px
+				&:nth-child(2) button
+					left: 20px
+				&:nth-child(3) button
+					left: 47px
+				&:nth-child(4) button
+					left: 75px
+				&:nth-child(5) button
+					left: 102px
+				&:nth-child(6) button
+					left: 132px
+				&:nth-child(7) button,
+				&:nth-child(8) button,
+				&:nth-child(9) button,
+				&:nth-child(10) button,
+				&:nth-child(11) button
+					display: none
 			&::before
 				left: 7px
 				content: ''
@@ -161,25 +180,6 @@
 				margin-right: -10px
 				span::after, button::before
 					display: none
-		li:nth-child(1) button
-			left: -8px
-		li:nth-child(2) button
-			left: 20px
-		li:nth-child(3) button
-			left: 47px
-		li:nth-child(4) button
-			left: 75px
-		li:nth-child(5) button
-			left: 102px
-		li:nth-child(6) button
-			left: 132px
-		li:nth-child(7) button,
-		li:nth-child(8) button,
-		li:nth-child(9) button,
-		li:nth-child(10) button,
-		li:nth-child(11) button
-			+r(599)
-				display: none
 		button
 			position: absolute
 			left: -7px
