--- a/src/sass/components/_blog.sass
+++ b/src/sass/components/_blog.sass
@@ -1,17 +1,43 @@
 .blog
 	&__container
-		display: flex
-		flex-wrap: wrap
+		font-size: 0
+		+sm
+			display: flex
+			flex-wrap: wrap
+			margin: 0 -10px
+		+xs
+			margin: 0
 	&__item
+		display: inline-block
+		vertical-align: top
 		position: relative
 		margin-right: 31px
 		width: percentage(254 / 1110)
 		margin-bottom: 30px
+		+md
+			width: 25%
+			margin-bottom: 15px
+			margin-right: 14px
+		+sm
+			flex: 1 1 auto
+			margin: 0 5px 15px
+		+xs
+			flex-basis: 100%
+			margin: 0 0 15px
 		&:nth-child(3n)
 			margin-right: 0
+			+sm
+				margin: 0 5px 15px
+			+xs
+				margin: 0 0 15px
 		&_md
 			margin-right: 30px
 			width: percentage(540 / 1110)
+			+md
+				width: 47%
+				margin-right: 15px
+			+sm
+				margin: 0 5px 15px
 		&_md &-text
 			position: absolute
 			bottom: 0
@@ -19,14 +45,24 @@
 			z-index: 2
 			padding: 12px 18px 20px
 			max-width: 350px
-			height: auto
 			background: rgba(#fff, .9)
 			border: 2px solid #e0e0e0
+			min-height: 0
+			+xs
+				position: static
+				max-width: 100%
+		&_md &-descr
+			height: 69px
+			margin-bottom: 10px
 		&_md &-img-wrap
 			height: 400px
+			+xs
+				height: auto
 		&-img-wrap
 			height: 188px
 			overflow: hidden
+			+xs
+				height: auto
 		&-img
 			transition: transform .2s cubic-bezier(0.55, 0.09, 0.68, 0.53)
 			will-change: transform
@@ -36,20 +72,26 @@
 		&-text
 			display: flex
 			flex-direction: column
-			height: 212px
 			padding: 15px 18px 20px
 			border: 2px solid #e0e0e0
 			border-top: 0
+			min-height: 212px
+			+md
+				padding: 15px 12px 20px
+			+xs
+				min-height: 0
 		&-title
 			margin-bottom: 8px
 		&-descr
-			margin-bottom: 10px
+			height: 110px
+			margin-bottom: 12px
 			font-size: 15px
 			line-height: 23px
+			+xs
+				height: auto
 		&-row
 			display: flex
 			justify-content: space-between
-			margin-top: auto
 		&-date
 			font-size: 14px
 			line-height: 22px
