--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -6,7 +6,7 @@
 	+xs
 		position: relative
 	&_no-slider
-		padding: 62px 0 53px
+		padding: 35px 0
 		border-bottom: 2px solid #e6e7e8
 	&__container
 		max-width: 1142px
