--- a/src/templates/components/_blog.jade
+++ b/src/templates/components/_blog.jade
@@ -8,7 +8,7 @@ if blog ? blog : blog = []
 				+e.IMG.item-img.obj-fit(src='img/content/blog-1.jpg')
 			+e.item-text
 				+e.H4.item-title.title-xs Зарядные устройства
-				+e.P.item-descr Произведенная с настоящим искусством, сочетающая в себе высочайший стандарт качества и великолепный.
+				+e.P.item-descr.js-dot Произведенная с настоящим искусством, сочетающая в себе высочайший стандарт качества и великолепный.
 				+e.item-row
 					+e.item-date 10.03.2017
 					+e.A.item-link.link(href='#!') ЧИТАТЬ
@@ -22,7 +22,7 @@ if blog ? blog : blog = []
 					+e.IMG.item-img.obj-fit(src='img/content/blog-#{imgCount}.jpg')
 				+e.item-text
 					+e.H4.item-title.title-xs Зарядные устройства
-					+e.P.item-descr Произведенная с настоящим искусством, сочетающая в себе высочайший стандарт качества и великолепный.
+					+e.P.item-descr.js-dot  Произведенная с настоящим искусством, сочетающая в себе высочайший стандарт качества и великолепный.
 					+e.item-row
 						+e.item-date 10.03.2017
 						+e.A.item-link.link(href='#!') ЧИТАТЬ
@@ -34,7 +34,7 @@ if blog ? blog : blog = []
 				+e.IMG.item-img.obj-fit(src='img/content/blog-6.jpg')
 			+e.item-text
 				+e.H4.item-title.title-xs Зарядные устройства
-				+e.P.item-descr Произведенная с настоящим искусством, сочетающая в себе высочайший стандарт качества и великолепный.
+				+e.P.item-descr.js-dot Произведенная с настоящим искусством, сочетающая в себе высочайший стандарт качества и великолепный.
 				+e.item-row
 					+e.item-date 10.03.2017
 					+e.A.item-link.link(href='#!') ЧИТАТЬ
