--- a/src/sass/components/_other-comp.sass
+++ b/src/sass/components/_other-comp.sass
@@ -33,8 +33,14 @@
 		flex-wrap: wrap
 		&-item
 			margin: 0 23px 30px
+			+sm
+				margin: 0 18px 20px
+			+xs
+				margin: 0 10px 12px
 			&:nth-child(7) ~ &
 				margin-bottom: 0
+				+xs
+					margin-bottom: 12px
 		&-link
 			position: relative
 			font-size: 18px
@@ -44,10 +50,16 @@
 			color: $black
 			letter-spacing: .07em
 			+tr(color .2s)
+			+xs
+				font-size: 16px
 			+hover
 				color: #d62326
 	&_default
 		padding: 56px 0 20px
+		+sm
+			padding: 35px 0 15px
+		+xs
+			padding: 25px 0 5px
 	&_aside
 		flex: 0 1 255px
 	&_aside &__container
