--- a/src/sass/pages/_articles.sass
+++ b/src/sass/pages/_articles.sass
@@ -1,11 +1,19 @@
 .articles
 	padding: 45px 0 60px
+	+sm
+		padding: 40px 0
+	+xs
+		padding: 20px 0
 	&__container
 		display: flex
 		justify-content: space-between
+		+xs
+		  flex-wrap: wrap
 	&__col
 		flex: 0 1 825px
-		
+		margin-left: 15px
+		+xs
+			margin: 20px 0 0
 .article
 	&__title
 		text-align: left
@@ -14,9 +22,20 @@
 		+clr
 		p
 			line-height: 1.2
+			+xs
+				font-size: 15px
 			&:not(:last-child)
 				margin-bottom: 20px
+				+xs
+					margin-bottom: 10px
+	&__date
+		+xs
+			margin: 5px 0 0
+			font-size: 14px
 	&__img-wrap
 		margin-right: 30px
 		float: left
 		width: percentage(540 / 825)
+		+sm
+			width: 55%
+			margin-right: 15px
