--- a/src/sass/components/_other-comp.sass
+++ b/src/sass/components/_other-comp.sass
@@ -245,8 +245,9 @@
 			bottom: 0
 	&_no-slider
 		position: relative
-		min-height: 954px
-		
+		img
+			min-height: 360px
+
 /* clients
 	----------------------------------- */
 .clients
