--- a/src/templates/components/_quality.jade
+++ b/src/templates/components/_quality.jade
@@ -13,7 +13,7 @@ if quality ? quality : quality = []
 		+e.BUTTON.btn.btn(type='button') СМОТРЕТЬ ПОДРОБНЕЕ
 
 	else
-		+e.bg-img(style='background-image: url(img/bg/quality_img.jpg)')
+		+e.IMG(src='img/bg/quality_img.jpg')
 		+e.BUTTON.btn.btn(type='button') СМОТРЕТЬ ПОДРОБНЕЕ
 
 
