--- a/src/sass/components/_category.sass
+++ b/src/sass/components/_category.sass
@@ -12,10 +12,24 @@
 	&__in
 		margin: 66px 0 0
 		+clr
+		+xs
+			display: flex
+			flex-direction: column
+			margin: 35px 0 0
+		&::after
+			+xs
+				display: none
 	&__list
 		float: left
-		margin-right: 30px
-		width: 350px
+		margin-right: (30 / 1110 * 100%)
+		width: percentage(350 / 1110)
+		+sm
+			margin-right: 2.7%
+		+xs
+			order: 2
+			float: none
+			width: 100%
+			margin: 20px 0 0
 		&-title
 			padding: 0 0 16px
 			color: $black
@@ -23,8 +37,13 @@
 			line-height: 1
 			font-weight: 700
 			border-bottom: 1px solid #e6e7e8
+			+sm
+				padding: 0 0 10px
+				font-size: 20px
 		&-links
 			padding: 42px 20px 42px 0
+			+sm
+				padding: 36px 0
 		&-item
 			&:not(:last-child)
 				margin-bottom: 10px
@@ -58,10 +77,17 @@
 				stroke: $black
 	&__view
 		float: left
-		width: calc(100% - 380px)
+		width: percentage(730 / 1110)
+		+xs
+			order: 1
+			float: none
+			width: 100%
+			text-align: center
 		&-item
 			height: 300px
 			overflow: hidden
+			+r(599)
+				height: 200px
 			img
 				transition: all 550ms ease-in-out
 				transform: scale(1.25, 1.25)
@@ -74,6 +100,8 @@
 			margin-top: 20px
 			margin-left: 57px
 			padding: 0 27px
+			+sm
+				margin-left: 0
 	&__list-links, &__view-pic
 		display: none
 		&.slick-initialized
@@ -81,6 +109,10 @@
 		
 	&_default
 		padding: 64px 0 175px
+		+md
+			padding: 60px 0 90px
+		+xs
+			padding: 40px 0 30px
 		.next-section
 			bottom: 10%
 	&_calendars
