--- a/src/sass/components/_footer.sass
+++ b/src/sass/components/_footer.sass
@@ -107,10 +107,9 @@
 			top: -5px
 			left: -8px
 			+s('akticom')
-		span
-			display: block
+		DIV
 			text-decoration: underline
-		&:hover span
+		&:hover DIV
 			text-decoration: none
 	&__copy
 		position: absolute
