--- a/src/templates/calendars-page.jade
+++ b/src/templates/calendars-page.jade
@@ -22,7 +22,7 @@ block content
 
 		//-benefits
 		-
-			var benefits = {classMod: '_big sect-bg js-next-section', title: 'СОБСТВЕННОЕ ПРОИЗВОДСТВО', slider: false};
+			var benefits = {classMod: '_big sect-bg js-next-section', title: 'СОБСТВЕННОЕ ПРОИЗВОДСТВО', slider: true};
 			var benefitsList = [{
 			classMod: '_horizontal',
 			picMod: 'tape',
@@ -42,7 +42,7 @@ block content
 			subTitle: 'автоматизированы',
 			descrTop: 'Для производства любого объема продукции любому количеству заказчиков'
 			}];
-			var benefitSldList = ['benefit-1', 'benefit-2', 'benefit-3', 'benefit-4', 'benefit-1', 'benefit-2'];
+			var benefitsSldList = ['benefit-1', 'benefit-2', 'benefit-3', 'benefit-4', 'benefit-1', 'benefit-2'];
 		include components/_benefits
 
 		//-benefits
