--- a/src/templates/partials/_footer.jade
+++ b/src/templates/partials/_footer.jade
@@ -80,5 +80,5 @@
 			+e.P Использование материалов сайта типографии Штрих Ру без письменного разрешения запрещено.
 
 		+e.A(href='#!').dev-link Сделано руками
-			+e.SPAN Актиком
+			+e.DIV Актиком
 // end footer
