--- a/src/templates/polygraphy-page.jade
+++ b/src/templates/polygraphy-page.jade
@@ -15,14 +15,14 @@ block content
 
 		//- category
 		-
-			var category = {classMod: '_calendars js-next-section', title: 'КАЛЕНДАРИ С ФИРМЕНЫМ СТИЛЕМ ДЛЯ НАШИХ КЛИЕНТОВ', listTitle: 'Виды календарей:', btnText: 'СМОТРЕТЬ ПОДРОБНЕЕ'};
-			var catList = ['Квартальные', 'Настенные перекиднные', '3в1', 'Планинги', 'Домики', 'Караманные', 'Нестандартные', 'Настенные перекиднные', 'Квартальные', 'Домики'];
+			var category = {classMod: '_default js-next-section', title: 'МЫ ДЕЛАЕМ СЛОЖНОЕ ОЧЕНЬ ПРОСТО', listTitle: 'Наш спектр услуг:', btnText: 'СМОТРЕТЬ ПОДРОБНЕЕ'};
+			var catList = ['Дизайн полиграфии', 'Разработка фирменного стиля и логотипа', 'Печать на специализированной бумаге', 'Шелкография', 'Черно-белая печать', 'Послепечатная обработка', 'Дополнительные возможности', 'Дизайн полиграфии', 'Черно-белая печать', 'Дополнительные возможности'];
 			var catViewList = ['category', 'category-2', 'category-3', 'category', 'category-2', 'category-3', 'category', 'category-2', 'category-3', 'category'];
 		include components/_category
 
 		//-benefits
 		-
-			var benefits = {classMod: '_big sect-bg js-next-section', title: 'СОБСТВЕННОЕ ПРОИЗВОДСТВО', slider: false};
+			var benefits = {classMod: '_big sect-bg js-next-section', title: 'СОБСТВЕННОЕ ПРОИЗВОДСТВО', slider: true};
 			var benefitsList = [{
 			classMod: '_horizontal',
 			picMod: 'tape',
@@ -42,12 +42,12 @@ block content
 			subTitle: 'автоматизированы',
 			descrTop: 'Для производства любого объема продукции любому количеству заказчиков'
 			}];
-			var benefitSldList = ['benefit-1', 'benefit-2', 'benefit-3', 'benefit-4', 'benefit-1', 'benefit-2'];
+			var benefitsSldList = ['benefit-1', 'benefit-2', 'benefit-3', 'benefit-4', 'benefit-1', 'benefit-2'];
 		include components/_benefits
 
 		//-benefits
 		-
-			var benefits = {classMod: '_souvenirs js-next-section', title: 'НАШ ОПЫТ — ВАША ГАРАНТИЯ КАЧЕСТВА'};
+			var benefits = {classMod: '_souvenirs js-next-section', title: 'НАШ ОПЫТ — ВАША ГАРАНТИЯ КАЧЕСТВА', slider: false};
 			var benefitsList = [{
 			picMod: 'tape',
 			title: '16 лет',
