--- a/src/sass/components/_category.sass
+++ b/src/sass/components/_category.sass
@@ -51,7 +51,7 @@
 			color: $red
 			border-bottom-color: $red
 		&-text
-			display: inline-block
+			display: inline
 			cursor: pointer
 			border-bottom: 1px solid rgba($grey, .7)
 			transition: border-bottom-color .2s, color .2s
@@ -110,12 +110,22 @@
 	&_default
 		padding: 64px 0 175px
 		+md
-			padding: 60px 0 90px
+			padding: 60px 0 130px
+		+sm
+			padding: 45px 0 70px
 		+xs
 			padding: 40px 0 30px
 		.next-section
 			bottom: 10%
+			+md
+				bottom: 5%
 	&_calendars
 		padding: 64px 0 165px
 		&::after
 			display: none
+		+md
+			padding: 60px 0 130px
+		+sm
+			padding: 45px 0 50px
+		+xs
+			padding: 30px 0 0
