--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -20,5 +20,6 @@
 @import components/work
 @import components/category
 @import components/history
+@import components/contacts
 
 @import pages/articles
