--- a/src/sass/components/_ask.sass
+++ b/src/sass/components/_ask.sass
@@ -46,3 +46,26 @@
 		padding: 45px 0 60px
 		+sm
 			padding: 40px 0 50px
+			
+	&_contact .title-md
+		text-align: left
+	&_contact &__container
+		padding: 0
+	&_contact &__form
+		margin: 15px 0 0
+	&_contact &__form-col
+		margin: 10px 0 0!important
+		width: 100%
+		float: none
+		text-align: left
+		&:first-child
+			margin-top: 0
+	&_contact &__form-message
+		min-height: 200px
+	&_contact &__form-field
+		margin-top: 10px
+		&:first-child
+			margin-top: 0
+	&_contact &__descr,
+	&_contact &__form-descr
+		display: none
