--- a/src/templates/polygraphy-page.jade
+++ b/src/templates/polygraphy-page.jade
@@ -47,38 +47,38 @@ block content
 
 		//-benefits
 		-
-			var benefits = {classMod: '_souvenirs js-next-section', title: 'НАШ ОПЫТ — ВАША ГАРАНТИЯ КАЧЕСТВА', slider: false};
+			var benefits = {classMod: '_polygraph js-next-section', title: 'НАШ ОПЫТ — ВАША ГАРАНТИЯ КАЧЕСТВА', slider: false};
 			var benefitsList = [{
-			picMod: 'tape',
-			title: '16 лет',
-			subTitle: 'производим колендари',
-			descrTop: 'С 2000 года владеем',
-			descrBot: 'собственной типографией'
+			picMod: 'types',
+			title: 'Более 30',
+			subTitle: 'видов',
+			descrTop: 'полиграфической продукции мы',
+			descrBot: 'делаем на собсвтенном производстве'
 			},{
-			picMod: 'push-btn',
-			title: '90%',
-			subTitle: 'процессов',
-			descrTop: 'Для производства любого объема',
-			descrBot: 'продукции любому колчеству заказчиков'
-			},{
-			picMod: 'cards',
-			title: '30 видов',
-			subTitle: 'календарей',
-			descrTop: 'Мы разрабатываем и реализум',
-			descrBot: 'нестандартные проекты любом сложности и тиража'
-			}
-			,{
 			picMod: 'handshake',
 			title: '967',
 			subTitle: 'компаний',
-			descrTop: 'Доверяют нам и работают',
-			descrBot: 'с нами на постоянной основе'
+			descrTop: 'доверяют нам и работают с нами',
+			descrBot: 'на постоянной основе'
 			},{
-			picMod: 'box',
-			title: '13 511 015',
-			subTitle: 'календарей',
-			descrTop: 'Мы изготовили за последние',
-			descrBot: '5 лет'
+			picMod: 'pen-list',
+			title: 'Более 5000',
+			subTitle: 'заказов',
+			descrTop: 'в год Мы разрабатываем',
+			descrBot: 'и реализуем нестандартные проекты любой сложности и любого тиража'
+			}
+			,{
+			picMod: 'list',
+			title: '129379 млн',
+			subTitle: 'листов-оттисков',
+			descrTop: 'мы произвели',
+			descrBot: 'за последние 5 лет'
+			},{
+			picMod: 'paper',
+			title: '2231 тонн',
+			subTitle: 'бумаги',
+			descrTop: 'израсходовали для',
+			descrBot: 'выполения заказов'
 			}];
 		include components/_benefits
 
