--- a/src/sass/components/_other-comp.sass
+++ b/src/sass/components/_other-comp.sass
@@ -203,6 +203,7 @@
 	display: flex
 	flex-direction: column
 	align-items: center
+	text-align: center
 	&__title
 		position: absolute
 		z-index: 2
