--- a/src/templates/partials/_header.jade
+++ b/src/templates/partials/_header.jade
@@ -1,4 +1,4 @@
-//BEGIN header
+//begin header
 +b.HEADER.header(class= headerClass ? headerClass : '')
   +b.BUTTON(type='button').nav-toggle.js-nav-toggle
     +e.SPAN.icon
@@ -24,4 +24,4 @@
           +b.DIV.count._cart 11
       +e.bar-col
         +e.A.bar-link._user(href='#!')
-//END header
+//end header
