--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -21,5 +21,6 @@
 @import components/category
 @import components/history
 @import components/contacts
+@import components/text-pages
 
 @import pages/articles
